Fixed random string error that was distorting about page nav bar

--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -9,6 +9,8 @@ body {
   background-color: black;
 }
 
+article {
+}
 .jumbotron h1,
 p {
   text-align: center;
